# routes/index.js
@@ -3,5 +3,6 @@ const router = express.Router();
 
 router.use('/', require('./swagger'));
 router.use('/users', require('./users'));
+router.use('/posts', require('./posts'));
 
 module.exports = router;
